--- a/sell/package.json
+++ b/sell/package.json
@@ -15,7 +15,8 @@
     "stylus": "^0.54.5",
     "vue": "^1.0.21",
     "vue-router": "^0.7.13",
-    "vue-resource": "^1.01"
+    "vue-resource": "^1.01",
+    "better-scroll": "^0.1.7"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
